feat: make new comment emmet for 2 input tag for submit and reset

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           Esse
         </label>
       </div>
-      <!-- input*2 -->
+      <!-- input[type="submit"][value="Submit"]+input[type="reset"][value="Reset"] -->
       <input type="submit" value="Submit" />
       <input type="reset" value="Reset" />
     </form>
