feat: make new folder pages and make file tableData.html inside folder pages and write hyperlink in both file tableData and index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- form>div*5>label>input -->
-    <form>
+    <form action="tableData.html">
       <div>
         <label for="nama">
           siapa nama anda ?
@@ -42,7 +42,7 @@
           Jika anda perokok, rokok apa yang anda
           <br />
           pernah coba? <br />
-          <input type="checkbox" value="perokok" />
+          <input type="checkbox" value="perokok" id="name" />
           Gudang Garam Filter
           <br />
           <input type="checkbox" />
@@ -56,8 +56,10 @@
         </label>
       </div>
       <!-- input[type="submit"][value="Submit"]+input[type="reset"][value="Reset"] -->
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Submit" id="name" />
       <input type="reset" value="Reset" />
     </form>
+    <br />
+    <a href="/pages/tableData.html">Tabel Data</a>
   </body>
 </html>
