feat: update jenis rokok if user not perokok, and update picture in assets

--- a/pages/tableData.html
+++ b/pages/tableData.html
@@ -23,28 +23,28 @@
           <td><font color="black">25</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">TIDAK</font></td>
-          <td><font color="black">ESSE</font></td>
+          <td><font color="black"></font></td>
         </tr>
         <tr>
           <td><font color="black">Yoga</font></td>
           <td><font color="black">23</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">TIDAK</font></td>
-          <td><font color="black">ESSE</font></td>
+          <td><font color="black"></font></td>
         </tr>
         <tr>
           <td><font color="black">Fikri</font></td>
           <td><font color="black">19</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">Ya</font></td>
-          <td><font color="black">Gudang Garam</font></td>
+          <td><font color="black">Gudang Garam, Marlboro</font></td>
         </tr>
         <tr>
           <td><font color="black">Isna</font></td>
           <td><font color="black">23</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">Ya</font></td>
-          <td><font color="black">Marlboro</font></td>
+          <td><font color="black">Lucky Strike, Marlboro</font></td>
         </tr>
         <tr>
           <td><font color="black">Anggi</font></td>
@@ -58,35 +58,35 @@
           <td><font color="black">19</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">TIDAK</font></td>
-          <td><font color="black">ESSE</font></td>
+          <td><font color="black"></font></td>
         </tr>
         <tr>
           <td><font color="black">Ghifar</font></td>
           <td><font color="black">25</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">Ya</font></td>
-          <td><font color="black">Gudang Garam</font></td>
+          <td><font color="black">Gudang Garam, Esse</font></td>
         </tr>
         <tr>
           <td><font color="black">Adit</font></td>
           <td><font color="black">25</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">TIDAK</font></td>
-          <td><font color="black">ESSE</font></td>
+          <td><font color="black"></font></td>
         </tr>
         <tr>
           <td><font color="black">Hilmy</font></td>
           <td><font color="black">25</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">TIDAK</font></td>
-          <td><font color="black">ESSE</font></td>
+          <td><font color="black"></font></td>
         </tr>
         <tr>
           <td><font color="black">Kang Asep</font></td>
           <td><font color="black">26</font></td>
           <td><font color="black">Laki-laki</font></td>
           <td><font color="black">Ya</font></td>
-          <td><font color="black">Marlboro</font></td>
+          <td><font color="black">Marlboro, Esse</font></td>
         </tr>
       </tbody>
     </table>
